Small edits on shop page

--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
         <nav class="main-navigation">
           <a class="inner-logo" href="index.html" title="На главную">
             <img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп &laquo;Бородинский&raquo;">
-          </div>
+          </a>
           <ul>
             <li>
               <a href="#" title="Информация">Информация</a>
@@ -21,7 +21,7 @@
             <li>
               <a href="#" title="Прайс-лист">Прайс-лист</a>
             </li>
-            <li>
+            <li class="is-active">
               <a href="#" title="Магазин">Магазин</a>
             </li>
             <li>
