Added inner-page class on inner pages

--- a/item.html
+++ b/item.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Набор для путешествий «Baxter of California» - Барбершоп</title>
   </head>
-  <body class="page">
+  <body class="page inner-page">
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
