--- a/price.html
+++ b/price.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Прайс-лист - Барбершоп</title>
   </head>
-  <body class="page">
+  <body class="page inner-page">
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
