--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="root" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Барбершоп</title>
   </head>
-  <body class="page">
+  <body>
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
