--- a/price.html
+++ b/price.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="root" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Прайс-лист - Барбершоп</title>
   </head>
-  <body class="page inner-page">
+  <body class="inner-page">
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
