Linked stylesheet to pages

--- a/item.html
+++ b/item.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Набор для путешествий «Baxter of California» - Барбершоп</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="inner-page">
     <header class="main-header">
