Added cross links for navigation

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
               <a href="#" title="Новости">Новости</a>
             </li>
             <li>
-              <a href="#" title="Прайс-лист">Прайс-лист</a>
+              <a href="price.html" title="Прайс-лист">Прайс-лист</a>
             </li>
             <li>
-              <a href="#" title="Магазин">Магазин</a>
+              <a href="shop.html" title="Магазин">Магазин</a>
             </li>
             <li>
               <a href="#" title="Контакты">Контакты</a>
