--- a/item.html
+++ b/item.html
@@ -20,10 +20,10 @@
               <a href="#" title="Новости">Новости</a>
             </li>
             <li>
-              <a href="#" title="Прайс-лист">Прайс-лист</a>
+              <a href="price.html" title="Прайс-лист">Прайс-лист</a>
             </li>
             <li class="is-active">
-              <a href="#" title="Магазин">Магазин</a>
+              <a href="shop.html" title="Магазин">Магазин</a>
             </li>
             <li>
               <a href="#" title="Контакты">Контакты</a>
@@ -43,7 +43,7 @@
             <a href="index.html" title="Главная">Главная</a>
           </li>
           <li>
-            <a href="#" title="Магазин">Магазин</a>
+            <a href="shop.html" title="Магазин">Магазин</a>
           </li>
           <li>
             <a href="#" title="Средства для ухода">Средства для ухода</a>
