--- a/price.html
+++ b/price.html
@@ -19,11 +19,11 @@
             <li>
               <a href="#" title="Новости">Новости</a>
             </li>
-            <li>
-              <a href="#" title="Прайс-лист">Прайс-лист</a>
-            </li>
             <li class="is-active">
-              <a href="#" title="Магазин">Магазин</a>
+              <a href="price.html" title="Прайс-лист">Прайс-лист</a>
+            </li>
+            <li>
+              <a href="shop.html" title="Магазин">Магазин</a>
             </li>
             <li>
               <a href="#" title="Контакты">Контакты</a>
