--- a/shop.html
+++ b/shop.html
@@ -20,10 +20,10 @@
               <a href="#" title="Новости">Новости</a>
             </li>
             <li>
-              <a href="#" title="Прайс-лист">Прайс-лист</a>
+              <a href="price.html" title="Прайс-лист">Прайс-лист</a>
             </li>
             <li class="is-active">
-              <a href="#" title="Магазин">Магазин</a>
+              <a href="shop.html" title="Магазин">Магазин</a>
             </li>
             <li>
               <a href="#" title="Контакты">Контакты</a>
@@ -43,7 +43,7 @@
             <a href="index.html" title="Главная">Главная</a>
           </li>
           <li>
-            <a href="#" title="Магазин">Магазин</a>
+            <a href="shop.html" title="Магазин">Магазин</a>
           </li>
           <li>
             Средства для ухода
@@ -105,11 +105,11 @@
         <div class="catalog-items">
           <div class="products">
             <article class="product">
-              <a class="product-thumb" href="#" title="Перейти на страницу товара">
+              <a class="product-thumb" href="item.html" title="Перейти на страницу товара">
                 <img src="img/products-thumb-01.jpg" width="220" height="165" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
               </a>
               <h2 class="product-title">
-                <a href="#" title="Перейти на страницу товара">
+                <a href="item.html" title="Перейти на страницу товара">
                   <span class="type">Набор для путешествий</span>
                   <span class="name">&laquo;Baxter of California&raquo;</span>
                 </a>
