--- a/price.html
+++ b/price.html
@@ -7,7 +7,7 @@
   </head>
   <body class="inner-page">
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <a class="inner-logo" href="index.html" title="На главную">
             <img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп &laquo;Бородинский&raquo;">
@@ -51,7 +51,7 @@
           <div class="big-heading">
             <b>Истинно мужская классика</b>
           </div>
-          <div class="content-colums">
+          <div class="inner-content-colums clearfix">
             <div class="inner-content-column-left">
               <h2>Мы используем только<br> лучшие средства:</h2>
               <ul class="custom-list-1">
@@ -92,7 +92,7 @@
       </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
