Added grid styles to shop page

--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
   </head>
   <body class="inner-page">
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <a class="inner-logo" href="index.html" title="На главную">
             <img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп &laquo;Бородинский&raquo;">
@@ -50,7 +50,7 @@
           </li>
         </ul>
       </nav>
-      <div class="catalog">
+      <div class="catalog clearfix">
         <aside class="catalog-filters">
           <form action="/" method="get">
             <fieldset class="manufacturers">
@@ -213,7 +213,7 @@
       </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
