Added grid styles to item page and changed its markup

--- a/item.html
+++ b/item.html
@@ -7,7 +7,7 @@
   </head>
   <body class="inner-page">
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <a class="inner-logo" href="index.html" title="На главную">
             <img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп &laquo;Бородинский&raquo;">
@@ -53,48 +53,48 @@
           </li>
         </ul>
       </nav>
-      <div class="product-content">
-        <div class="product-showcase">
-          <div class="large-image">
-            <img src="img/product-showcase-large-image.jpg" width="460" height="498" alt="Travel kit &laquo;Baxter of California&raquo;">
-          </div>
-          <div class="small-image">
-            <img src="img/product-showcase-small-image-01.jpg" width="140" height="149" alt="Travel kit &laquo;Baxter of California&raquo;">
-          </div>
-          <div class="small-image">
-            <img src="img/product-showcase-small-image-02.jpg" width="140" height="149" alt="Travel kit &laquo;Baxter of California&raquo;">
-          </div>
-          <div class="small-image">
-            <img src="img/product-showcase-small-image-03.jpg" width="140" height="149" alt="Travel kit &laquo;Baxter of California&raquo;">
-          </div>
+      <div class="inner-content clearfix">
+        <div class="inner-content-column-left product-showcase clearfix">
+            <div class="large-image">
+              <img src="img/product-showcase-large-image.jpg" width="460" height="498" alt="Travel kit &laquo;Baxter of California&raquo;">
+            </div>
+            <div class="small-image">
+              <img src="img/product-showcase-small-image-01.jpg" width="140" height="149" alt="Travel kit &laquo;Baxter of California&raquo;">
+            </div>
+            <div class="small-image">
+              <img src="img/product-showcase-small-image-02.jpg" width="140" height="149" alt="Travel kit &laquo;Baxter of California&raquo;">
+            </div>
+            <div class="small-image">
+              <img src="img/product-showcase-small-image-03.jpg" width="140" height="149" alt="Travel kit &laquo;Baxter of California&raquo;">
+            </div>
         </div>
-        <div class="product-info">
-          <div class="product-extra">
-            <p class="product-availability">Есть в наличии</p>
-            <p class="product-article">Артикул: Dexter-AE</p>
-          </div>
-          <div class="product-description">
-            <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-          </div>
-          <div class="product-price">
-            <span class="value">2 900 руб.</span>
-            <a class="btn" href="#" title="Купить">Купить</a>
-          </div>
-          <div class="product-features">
-            <h2>В набор входят:</h2>
-            <ul>
-              <li>Средство для умывания (50 мл)</li>
-              <li>Увлажняющий крем (50 мл)</li>
-              <li>Крем для бритья (50 мл)</li>
-              <li>Крем после бритья, шампунь (50 мл)</li>
-              <li>Удобная кжаная косметика</li>
-            </ul>
-          </div>
+        <div class="inner-content-column-right product-info">
+            <div class="product-extra">
+              <p class="product-availability">Есть в наличии</p>
+              <p class="product-article">Артикул: Dexter-AE</p>
+            </div>
+            <div class="product-description">
+              <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+            </div>
+            <div class="product-price">
+              <span class="value">2 900 руб.</span>
+              <a class="btn" href="#" title="Купить">Купить</a>
+            </div>
+            <div class="product-features">
+              <h2>В набор входят:</h2>
+              <ul>
+                <li>Средство для умывания (50 мл)</li>
+                <li>Увлажняющий крем (50 мл)</li>
+                <li>Крем для бритья (50 мл)</li>
+                <li>Крем после бритья, шампунь (50 мл)</li>
+                <li>Удобная кжаная косметика</li>
+              </ul>
+            </div>
         </div>
       </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
