--- a/price.html
+++ b/price.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Прайс-лист - Барбершоп</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="inner-page">
