Added styles for shop page

--- a/shop.html
+++ b/shop.html
@@ -88,7 +88,7 @@
               <ul>
                 <li>
                   <input id="products-group-1" type="radio" name="products-group" value="1">
-                  <label for="products-group-1">Бритвенные принадлежности</label>
+                  <label for="products-group-1">Бритвенные <br> принадлежности</label>
                 </li>
                 <li>
                   <input id="products-group-2" type="radio" name="products-group" value="2" checked>
