Added styles for item page

--- a/item.html
+++ b/item.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="inner-content-column-right product-info">
-            <div class="product-extra">
+            <div class="product-extra clearfix">
               <p class="product-availability">Есть в наличии</p>
               <p class="product-article">Артикул: Dexter-AE</p>
             </div>
@@ -83,7 +83,7 @@
             </div>
             <div class="product-features">
               <h2>В набор входят:</h2>
-              <ul>
+              <ul class="custom-list custom-list-2">
                 <li>Средство для умывания (50 мл)</li>
                 <li>Увлажняющий крем (50 мл)</li>
                 <li>Крем для бритья (50 мл)</li>
