--- a/price.html
+++ b/price.html
@@ -55,7 +55,7 @@
           <div class="inner-content-colums clearfix">
             <div class="inner-content-column-left">
               <h2>Мы используем только<br> лучшие средства:</h2>
-              <ul class="custom-list-1">
+              <ul class="custom-list custom-list-1">
                 <li>Baxter of California</li>
                 <li>Mr Natty</li>
                 <li>Suavecito</li>
