--- a/price.html
+++ b/price.html
@@ -21,7 +21,7 @@
               <a href="#" title="Новости">Новости</a>
             </li>
             <li class="is-active">
-              <a href="price.html" title="Прайс-лист">Прайс-лист</a>
+              <a>Прайс-лист</a>
             </li>
             <li>
               <a href="shop.html" title="Магазин">Магазин</a>
@@ -50,11 +50,11 @@
       </nav>
       <div class="inner-content">
           <div class="big-heading">
-            <b>Истинно мужская классика</b>
+            <h2>Истинно мужская классика</h2>
           </div>
           <div class="inner-content-colums clearfix">
             <div class="inner-content-column-left">
-              <h2>Мы используем только<br> лучшие средства:</h2>
+              <h2>Мы используем только <br> лучшие средства:</h2>
               <ul class="custom-list custom-list-1">
                 <li>Baxter of California</li>
                 <li>Mr Natty</li>
@@ -80,7 +80,6 @@
               </table>
             </div>
           </div>
-
           <div class="inner-content-columns clearfix">
             <h2>Несколько слов о нас:</h2>
             <div class="inner-content-column-left">
