Checked the shop page via PerfectPixel, updated HTMLAcademy link in the main-footer

--- a/item.html
+++ b/item.html
@@ -110,7 +110,7 @@
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
-          <a class="btn" href="https://htmlacademy.ru" title="HTML Academy">HTML Academy</a>
+          <a class="btn" href="https://htmlacademy.ru" title="HTML Academy">HTMLAcademy.ru</a>
         </section>
       </div>
     </footer>
