Checked item page via PerfectPixel

--- a/item.html
+++ b/item.html
@@ -54,7 +54,7 @@
           </li>
         </ul>
       </nav>
-      <div class="inner-content clearfix">
+      <div class="inner-content product-content clearfix">
         <div class="inner-content-column-left product-showcase clearfix">
             <div class="large-image">
               <img src="img/product-showcase-large-image.jpg" width="460" height="498" alt="Travel kit &laquo;Baxter of California&raquo;">
@@ -88,7 +88,7 @@
                 <li>Увлажняющий крем (50 мл)</li>
                 <li>Крем для бритья (50 мл)</li>
                 <li>Крем после бритья, шампунь (50 мл)</li>
-                <li>Удобная кжаная косметика</li>
+                <li>Удобная кожаная косметичка</li>
               </ul>
             </div>
         </div>
