Checked price page via PerfectPixel

--- a/price.html
+++ b/price.html
@@ -83,7 +83,7 @@
           <div class="inner-content-columns clearfix">
             <h2>Несколько слов о нас:</h2>
             <div class="inner-content-column-left">
-              <p class="short-text">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас — это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+              <p class="short-text">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
             </div>
             <div class="inner-content-column-right">
               <p class="short-text">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
