Added JS for handling modals and google maps iframe

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             пн — пт: с 10:00 до 22:00<br>
             сб — вс: с 10:00 до 19:00
           </p>
-          <a class="btn btn-map" href="#" title="Как проехать">Как проехать</a>
+          <a class="btn btn-map js-open-map" href="#" title="Как проехать">Как проехать</a>
           <a class="btn btn-feedback" href="#" title="Обратная связь">Обратная связь</a>
         </div>
         <div class="index-content-right">
@@ -128,6 +128,7 @@
     </footer>
     <!-- Modals
       ---------------------------------------------------------->
+      <div class="modal-overlay"></div>
       <div class="modal-content">
         <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
         <h2 class="modal-content-title">Личный кабинет</h2>
@@ -148,8 +149,10 @@
       </div>
       <div class="modal-content-map">
         <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-        <div id="yandex-map"></div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426&" width="752" height="547" frameborder="0" style="border:0;" allowfullscreen></iframe>
       </div>
-      <div class="modal-overlay"></div>
+      <!-- JS
+        ---------------------------------------------------------->
+      <script src="js/script.js"></script>
   </body>
 </html>
