Minified and linked style.css

--- a/item.html
+++ b/item.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Набор для путешествий «Baxter of California» - Барбершоп</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="inner-page">
     <header class="main-header">
