Modified, minified and linked script.js

--- a/item.html
+++ b/item.html
@@ -99,7 +99,7 @@
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#" title="Как нас найти">Как нас найти?</a><br>
+          <a class="js-open-map" href="contacts.html" title="Как нас найти">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
         </section>
         <section class="footer-social">
@@ -136,12 +136,16 @@
           <button class="btn btn-login" type="submit">Войти</button>
         </form>
       </div>
+      <div class="modal-content-map">
+        <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426&" width="752" height="547" style="border:0;" allowfullscreen></iframe>
+      </div>
       <!-- JS
         ---------------------------------------------------------->
       <script>
         // A check whether JS is on/off
         (function(){var html=document.documentElement;html.className=html.className.replace('no-js','js');})();
       </script>
-      <script src="js/script.js"></script>
+      <script src="js/script.min.js"></script>
   </body>
 </html>
