--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#" title="Как нас найти">Как нас найти?</a><br>
+          <a class="js-open-map" href="contacts.html" title="Как нас найти">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
         </section>
         <section class="footer-social">
@@ -86,12 +86,5 @@
         </section>
       </div>
     </footer>
-    <!-- JS
-      ---------------------------------------------------------->
-    <script>
-      // A check whether JS is on/off
-      (function(){var html=document.documentElement;html.className=html.className.replace('no-js','js');})();
-    </script>
-    <script src="js/script.js"></script>
   </body>
 </html>
